2004-09-30  Jamey Sharp <jamey@minilop.net>

	* src/cairo_xcb_surface.c:
	Update for minor XCB API change.

2004-09-20  David Reveman  <c99drn@cs.umu.se>

	* src/cairo_glitz_surface.c (_cairo_glitz_surface_create_similar): 
	Make sure that only offscreen formats are picked.
	(_cairo_glitz_surface_create_similar): Only try to find offscreen
	multi-sample format if offscreen multi-sampling is supported.
	(_cairo_glitz_surface_create_similar): If we can't find a drawable
	format try to pick a non-drawable format.
	(_cairo_glitz_surface_composite): Mask clone should be in
	CAIRO_FORMAT_A8 format.

2004-09-15  David Reveman  <c99drn@cs.umu.se>

	* src/cairo_glitz_surface.c (_cairo_glitz_surface_set_image): Do
	the scanline order conversion in cairo.
	(_cairo_glitz_surface_create_pattern): Pre-multiply gradient colors.
	(_cairo_glitz_surface_create_similar): Find similar formats
	correctly.

2004-09-12  David Reveman  <c99drn@cs.umu.se>

	* src/cairo_glitz_surface.c (_cairo_glitz_surface_create_pattern):
	Pickup repeat setting when cloning surface.
	(_cairo_glitz_surface_create_pattern): cairo_surface_set_repeat
	likes to get a cairo_surface_t pointer not a cairo_glitz_surface_t
	pointer.
	(_cairo_glitz_surface_set_image): Get pixel masks from pixman image
	format.

2004-09-11  Carl Worth  <stacyworth@pippin.local>

	* autogen.sh: Require automake 1.6 rather than 1.7 since it seems
	to work just fine.

2004-09-11  David Reveman  <c99drn@cs.umu.se>

	* configure.in: Require version 0.2.2 of glitz.

	* src/cairo_glitz_surface.c (_cairo_glitz_surface_create_pattern): 
	0.5 should no longer be added to gradient stop coordinates.

	* src/cairo.h: CAIRO_HAS_GL_SURFACE -> CAIRO_HAS_GLITZ_SURFACE.
	cairo_set_target_gl -> cairo_set_target_glitz.
	cairo_gl_surface_create -> cairo_glitz_surface_create.

	* src/cairo-features.h.in: GL_SURFACE_FEATURE -> GLITZ_SURFACE_FEATURE.

	* src/Makefile.am: CAIRO_HAS_GL_SURFACE -> CAIRO_HAS_GLITZ_SURFACE,