@@ -141,7 +141,7 @@ AC_ARG_ENABLE(glitz,
   [use_glitz=$enableval], [use_glitz=yes])
 
 if test "x$use_glitz" = "xyes"; then
-  PKG_CHECK_MODULES(GLITZ, glitz >= 0.2.2, [
+  PKG_CHECK_MODULES(GLITZ, glitz >= 0.2.3, [
     GLITZ_REQUIRES=glitz
     use_glitz=yes], [use_glitz="no (requires glitz http://freedesktop.org/software/glitz)"])
 fi
